# ghchain

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  pytest.ini  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: pre_commit_checker.yml  release.yaml  test.yml  update_changelog.yaml
ghchain/: __init__.py  cli.py  commit.py  config.py  git_utils.py  github_utils.py  handlers.py  pull_request.py  stack.py  status.py  utils.py
tests/: __init__.py  conftest.py  manual.py  test_add_pr_to_title.py  test_add_pr_trailer.py  test_cli_mock.py  test_commit_mock.py  test_fix_refs_trailer.py  test_get_next_gh_id.py  test_ghchain.py  test_process_commit_trailer.py  test_stack.py  test_stack_mock.py  test_worktree_preflight.py  tests.py
